# trend-following-crypto

./: .gitignore  pyproject.toml
src/: backtest.ipynb  backtest.py  binance_api.py  coinapi_fetcher.py  coinbase_reader.py  fetch_coinapi.ipynb  index.csv  index_weights.csv  ledoit_wolf.py  position_size.py  simple_regression.py  test_position_size.py  trade.ipynb  weights.csv
