[tool.poetry]
name = "2025-04-crypto"
version = "0.1.0"
description = ""
authors = ["Felix Steiner <felix_steiner@bluewin.ch>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
tiingo = "^0.16.1"
requests = "^2.32.3"
ipympl = "^0.9.7"
scikit-learn = "^1.7.1"
bt = "^1.1.2"
pyportfolioopt = "^1.5.6"
python-binance = "^1.0.30"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
